Allows clicking on accounts page to see month spen Brought table to front to prevent overlap

--- a/src/App.css
+++ b/src/App.css
@@ -251,6 +251,7 @@ table {
   max-width: 90%;
   border-width: 3px;
   background-color: rgb(250, 230, 205);
+  z-index: 3;
 }
 
 th {
